--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
                         <span>Upto 50% Off</span>
                         <span><a href="#">Shop Now</a></span>
                     </div>
-                    <div class="slide-img"><img src="../grocery website/image/home-img-1.png" alt=""></div>
+                    <div class="slide-img"><img src="./assets/home-img-1.png" alt="青椒"></div>
                     <span class="iconfont icon-jiantouyou"></span>
                     <span class="iconfont icon-jiantouyou-copy"></span>
                 </div>
@@ -51,7 +51,7 @@
                         <div>Upto 75% Off</div>
                         <div><a href="#">Shop Now</a></div>
                     </div>
-                    <img src="./assets/banner-1.jpg" alt="">
+                    <img src="./assets/banner-1.jpg" alt="彩椒">
                 </div>
                 <div class="banner">
                     <div class="content">
@@ -59,7 +59,7 @@
                         <div>Upto 75% Off</div>
                         <div><a href="#">Shop Now</a></div>
                     </div>
-                    <img src="./assets/banner-2.jpg" alt="">
+                    <img src="./assets/banner-2.jpg" alt="果汁">
                 </div>
                 <div class="banner">
                     <div class="content">
@@ -67,7 +67,7 @@
                         <div>Upto 75% Off</div>
                         <div><a href="#">Shop Now</a></div>
                     </div>
-                    <img src="./assets/banner-3.jpg" alt="">
+                    <img src="./assets/banner-3.jpg" alt="蔬菜">
                 </div>
             </section>
         </main>
